[package]
name = "field"
version = "0.0.1"
authors = [
    "Nugzari Uzoevi <nougzar.ouzoev@hotmail.fr>",
]
edition = "2021"
rust-version = "1.56"
description = "Library for building and interfacing with finite fields"
readme = "README.md"
documentation = ""
homepage = "https://github.com/algebra-rs/field"
repository = "https://github.com/algebra-rs/field"

[dependencies]
rand_core = { version = "0.6" }