[package]
name = "field"
version = "0.0.1"
authors = [
    "Nugzari Uzoevi <nougzar.ouzoev@hotmail.fr>",
]
edition = "2021"
rust-version = "1.56"
description = "Library for building and interfacing with finite fields"
readme = "README.md"
documentation = ""
homepage = "https://github.com/algebra-rs/field"
repository = "https://github.com/algebra-rs/field"

[dependencies]
num-bigint = "0.4.4"
num-traits = "0.2.18"
rand = "0.8.5"
rand_core = { version = "0.6" }
